--- a/src/main/resources/com/labtasks/task/AddItems.fxml
+++ b/src/main/resources/com/labtasks/task/AddItems.fxml
@@ -1,66 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.geometry.Pos?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="412.0" prefWidth="631.0" spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="com.labtasks.task.AddItemsController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="10.0" style="-fx-background-color: #87CEEB;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.labtasks.task.AddItemsController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label text="Enter Product Details" />
+    <Label style="-fx-background-color: #87CEEB;" text="Enter Product Details" />
 
-    <VBox spacing="5.0">
-        <HBox spacing="10.0" alignment="CENTER">
-            <Label text="Product 1" />
-            <TextField fx:id="product1" />
-            <Label text="Price" />
-            <TextField fx:id="price1" />
-        </HBox>
-    </VBox>
+    <HBox alignment="CENTER" spacing="10.0" style="-fx-background-color: #87CEEB;">
+        <Label text="Product" />
+        <TextField fx:id="product" />
+        <Label text="Price" />
+        <TextField fx:id="price" />
+    </HBox>
 
-    <VBox spacing="5.0">
-        <HBox spacing="10.0" alignment="CENTER">
-            <Label text="Product 2" />
-            <TextField fx:id="product2" />
-            <Label text="Price" />
-            <TextField fx:id="price2" />
-        </HBox>
-    </VBox>
+    <HBox alignment="CENTER" spacing="10.0">
+        <Label text="Description" />
+        <TextArea fx:id="description" prefColumnCount="20" prefRowCount="3" />
+    </HBox>
 
-    <VBox spacing="5.0">
-        <HBox spacing="10.0" alignment="CENTER">
-            <Label text="Product 3" />
-            <TextField fx:id="product3" />
-            <Label text="Price" />
-            <TextField fx:id="price3" />
-        </HBox>
-    </VBox>
+    <HBox alignment="CENTER" spacing="10.0">
+        <Button onAction="#onSelectImageClick" text="Select Image" />
+        <ImageView fx:id="imageView" fitHeight="100" fitWidth="100" />
+    </HBox>
 
-    <VBox spacing="5.0">
-        <HBox spacing="10.0" alignment="CENTER">
-            <Label text="Product 4" />
-            <TextField fx:id="product4" />
-            <Label text="Price" />
-            <TextField fx:id="price4" />
-        </HBox>
-    </VBox>
+    <HBox alignment="CENTER" spacing="10.0">
+        <Button onAction="#onSubmitButtonClick" text="Submit" />
+        <Button onAction="#onDeleteButtonClick" text="Delete Selected Item" />
+        <Button onAction="#onCloseButtonClick" text="Close" />
+    </HBox>
 
-    <VBox spacing="5.0">
-        <HBox spacing="10.0" alignment="CENTER">
-            <Label text="Product 5" />
-            <TextField fx:id="product5" />
-            <Label text="Price" />
-            <TextField fx:id="price5" />
-        </HBox>
-    </VBox>
+    <Label fx:id="statusMessage" />
 
-    <Button onAction="#onSubmitButtonClick" text="Submit" />
-
-    <Button onAction="#onBackButtonClick" text="Back" />
+    <TilePane fx:id="tilePane" alignment="CENTER" hgap="10" vgap="10">
+        <!-- Products will be displayed here -->
+    </TilePane>
 </VBox>
